fe/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leda-diecutting-web
  labels:
    app: leda-diecutting-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts: [WEB_HOST]
      secretName: leda-diecutting-web-tls
  rules:
    - host: WEB_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: leda-diecutting-web
                port:
                  number: 80
